IAC/Kubernetes/services/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: my-app-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
