IAC/Kubernetes/services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: my-app-frontend  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
